# autodeleveraging-analysis

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  hyperreplay_enrichment.patch  methodology-TLDR.md  methodology.md  pyproject.toml  run-all.sh
.github/workflows/: ci.yml
docs/: FAQs.md
paper/: adl-trilemma-proof.tex  algorithms.tex  capped-pro-rata.tex  defs.tex  defs_corrected.tex  empirical.tex  follower.tex  ltv-example.tex  main.tex  main_corrected.tex  main_examples.tex  moral-hazard-2.tex  moral-hazard.tex  opposing-orders.tex  rap.tex  references.bib  regret.tex  smoothness.tex  stackelberg-nash.tex
paper/corrected/: adl-trilemma-proof.tex  algorithms.tex  capped-pro-rata.tex  empirical.tex  liquidation-mechanics.tex  moral-hazard-2.tex  rap.tex  smoothness.tex  stackelberg.tex
scripts/: clone_deps.sh  generate_figure_hashes.py  generate_full_report.py  generate_narrative_report.py  visualize_corrections.py  visualize_corrections.sh
src/oss_adl/: __init__.py  adl_contract_pro_rata.py  bad_debt.py  cli.py  paths.py  plots.py  policy_per_wave.py  queue_overshoot.py  two_pass_replay.py  two_time_behavior.py  vector_mirror_descent.py
tests/: __init__.py  conftest.py  reference_hashes.json  test_cli.py  test_figure_hashes.py  test_plots.py
